# booklid-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yml
examples/: mock_watch.rs  subscribe.rs  watch.rs  watch_blocking.rs
src/: backend_hidapi.rs  backend_linux.rs  backend_mac_als.rs  backend_mock.rs  backend_win.rs  lib.rs  persist.rs  types.rs
tests/: mock_stream.rs
