[package]
name = "booklid-rust"
version = "1.0.0"
edition = "2024"
rust-version = "1.85.0"
description = "Read laptop lid angle (degrees) with async or blocking apps (macOS / Windows / Linux)"
repository = "https://github.com/chintan-27/booklid-rust"
homepage = "https://github.com/chintan-27/booklid-rust"
license = "MIT"
readme = "README.md"

[features]
# Default to macOS HID hinge support
default = ["mac_hid_feature"]

diagnostics = []

# macOS
mac_hid_feature = ["dep:hidapi"]
mac_hid_discovery = []
mac_iokit_raw = []
mac_als = []

# Windows
win_sensors = ["dep:windows"]

# Linux
linux_iio_proxy = ["dep:zbus"]
linux_iio_sys = []

# Testing only
mock = ["dep:anyhow"]

[dependencies]
futures-core = "0.3"
futures-util = "0.3"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

thiserror = "1"
once_cell = "1"

# Persistence (1.0)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

# Optional backends
hidapi = { version = "2", optional = true }
anyhow = { version = "1", optional = true }

# Windows (WinRT sensors)
windows = { version = "0.58", optional = true, features = [
  "Devices_Sensors",
  "Foundation",
  "Foundation_Collections"
] }

# Linux
zbus = { version = "4", optional = true }
glob = "0.3"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
